style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
}

.header-and-hero {
    background: #1f2937;
}

.header-logo {
    color: #f9faf8;
    font-size: 24px;
}

.hero-main-text {
    color: #f9faf8;
    font-size: 48px;
}

.hero-secondary-text {
    color: #e5e7eb;
    font-size: 18px;
}

.hero-button {
    background-color: #3882f6;
    color: #f9faf8;
}

.info-header {
    color: #1f2937;
    font-size: 36px;
    font-weight: 800;
}

.quote {
    background-color: #e5e7eb;
}

.quote-text {
    color: #1f2937;
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}

.action-banner {
    background-color: #3882f6;
}

.action-button {
    background-color: #3882f6;
    color: #f9faf8;
}

.footer {
    background-color: #1f2937;
    color: #e5e7eb;
}

a, a:visited, a:hover, a:active {
    color: inherit;
    text-decoration: none;
  }

